fix: hide scrollbar on textarea

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,3 +79,12 @@
   }
 }
 
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
